[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/laser.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Laser.gd" type="Script" id=2]
[ext_resource path="res://SFX Samples/hurt.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX Samples/shoot.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Laser" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -4, -4, 8, 8 )

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
